# SamKit

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Package.swift  README.md  SAMKit_Strategy_CoreML_TFLite_EN.md
cmake/: SAMKitConfig.cmake.in
core/: CMakeLists.txt
core/include/samkit/: image.h  postprocessor.h  preprocessor.h  tensor.h  types.h
core/src/: image.cpp  postprocessor.cpp  preprocessor.cpp  tensor.cpp
core/tests/: CMakeLists.txt
docs/: huggingface_sam2_integration.md  sam2_usage_instructions.md
models/: download_sam2.sh  setup_sam2.md  test_sam2.py
models/converters/: convert_sam2_to_coreml.py  convert_to_coreml.py  convert_to_tflite.py  requirements.txt
runtime/android/: build.gradle  gradle.properties  settings.gradle
runtime/android/samkit/: build.gradle
runtime/android/samkit/src/main/: AndroidManifest.xml
runtime/android/samkit/src/main/cpp/: CMakeLists.txt  samkit_jni.cpp
runtime/android/samkit/src/main/java/com/samkit/: Postprocessor.kt  Preprocessor.kt  SamSession.kt
runtime/apple/: Package.swift
runtime/apple/Sources/SAMKit/: Postprocessor.swift  Preprocessor+Image.swift  Preprocessor.swift  SamSession+SAM2.swift  SamSession.swift  Types.swift
runtime/apple/Sources/SAMKitUI/: SamView.swift
samples/: README.md
samples/android-sample/: build.gradle  gradle.properties  settings.gradle
samples/android-sample/app/: build.gradle
samples/android-sample/app/src/main/: AndroidManifest.xml
samples/android-sample/app/src/main/java/com/samkit/demo/: MainActivity.kt
samples/android-sample/app/src/main/java/com/samkit/demo/ui/theme/: Theme.kt  Type.kt
samples/android-sample/app/src/main/res/values/: strings.xml  themes.xml
samples/android-sample/app/src/main/res/xml/: file_paths.xml
samples/ios-sample/: Package.swift  test-model-loading.swift
samples/ios-sample/SAMKitDemo/: ContentView.swift  Info.plist  SAMKitDemoApp.swift
samples/ios-sample/SAMKitDemo.xcodeproj/: project.pbxproj
ui/android/samkit-ui/: build.gradle
ui/android/samkit-ui/src/main/: AndroidManifest.xml
ui/android/samkit-ui/src/main/java/com/samkit/ui/: SamView.kt
ui/ios/Sources/: SamView.swift
